--- a/index.html
+++ b/index.html
@@ -296,16 +296,21 @@
                 </div>
                 <div class="contact-form">
                     <div class="glass-card">
-                        <form class="form" id="contactForm" method="POST" action="#">
-                                                        <div class="form-group">
+                        <form class="form" id="contactForm" method="POST" action="https://formsubmit.co/oclooamen83@gmail.com">
+                            <!-- FormSubmit Configuration -->
+                            <input type="hidden" name="_subject" value="New SAM-ReJ COMPANY LIMITED Inquiry">
+                            <input type="hidden" name="_template" value="table">
+                            <input type="hidden" name="_captcha" value="false">
+                            
+                            <div class="form-group">
                                 <input type="text" name="name" id="name" placeholder="Your Name (e.g., John Smith)" pattern="[a-zA-Z\s\-'\.]+" maxlength="50" autocomplete="name" required>
-            </div>
-            <div class="form-group">
-                <input type="email" name="email" id="email" placeholder="Your Email (e.g., john@example.com)" autocomplete="email" required>
-            </div>
-                        <div class="form-group">
-                <input type="tel" name="phone" id="phone" placeholder="Your Phone (e.g., +233 500 576 663)" pattern="[0-9\s\(\)\-\+\.]+" inputmode="numeric" maxlength="25" autocomplete="tel">
-            </div>
+                            </div>
+                            <div class="form-group">
+                                <input type="email" name="email" id="email" placeholder="Your Email (e.g., john@example.com)" autocomplete="email" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="tel" name="phone" id="phone" placeholder="Your Phone (e.g., +233 500 576 663)" pattern="[0-9\s\(\)\-\+\.]+" inputmode="numeric" maxlength="25" autocomplete="tel">
+                            </div>
                             <div class="form-group">
                                 <select name="service" id="service" required aria-label="Select a service type" title="Choose the type of service you need">
                                     <option value="">Select Service</option>
