Fixed phone number validation for Ghanaian 10-digit format

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                                 <input type="email" name="email" id="email" placeholder="Your Email (e.g., john@example.com)" autocomplete="email" required>
                             </div>
                             <div class="form-group">
-                                <input type="tel" name="phone" id="phone" placeholder="Your Phone (e.g., +233 500 576 663)" pattern="[0-9\s\(\)\-\+\.]+" inputmode="numeric" maxlength="25" autocomplete="tel">
+                                <input type="tel" name="phone" id="phone" placeholder="Your Phone (e.g., 0257679050)" pattern="[0-9]{10}" inputmode="numeric" maxlength="10" autocomplete="tel" required>
                             </div>
                             <div class="form-group">
                                 <select name="service" id="service" required aria-label="Select a service type" title="Choose the type of service you need">
