--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 </div>
                 <div class="contact-form">
                     <div class="glass-card">
-                        <form class="form" id="contactForm" method="POST" action="https://formsubmit.co/oclooamen83@gmail.com">
+                        <form class="form" id="contactForm" method="POST" action="https://formsubmit.co/el/rajufo">
                             <!-- FormSubmit Configuration -->
                             <input type="hidden" name="_subject" value="New SAM-ReJ COMPANY LIMITED Inquiry">
                             <input type="hidden" name="_template" value="table">
@@ -309,7 +309,23 @@
                                 <input type="email" name="email" id="email" placeholder="Your Email (e.g., john@example.com)" autocomplete="email" required>
                             </div>
                             <div class="form-group">
-                                <input type="tel" name="phone" id="phone" placeholder="Your Phone (e.g., 0257679050)" pattern="[0-9]{10}" inputmode="numeric" maxlength="10" autocomplete="tel" required>
+                                <div class="phone-input-container">
+                                    <div class="country-selector">
+                                        <select id="countryCode" name="countryCode" required>
+                                            <option value="+233" data-flag="🇬🇭" data-pattern="[0-9]{10}" data-placeholder="0257679050">🇬🇭 Ghana (+233)</option>
+                                            <option value="+234" data-flag="🇳🇬" data-pattern="[0-9]{11}" data-placeholder="08012345678">🇳🇬 Nigeria (+234)</option>
+                                            <option value="+254" data-flag="🇰🇪" data-pattern="[0-9]{9}" data-placeholder="712345678">🇰🇪 Kenya (+254)</option>
+                                            <option value="+27" data-flag="🇿🇦" data-pattern="[0-9]{9}" data-placeholder="0821234567">🇿🇦 South Africa (+27)</option>
+                                            <option value="+1" data-flag="🇺🇸" data-pattern="[0-9]{10}" data-placeholder="(555) 123-4567">🇺🇸 USA (+1)</option>
+                                            <option value="+44" data-flag="🇬🇧" data-pattern="[0-9]{11}" data-placeholder="07123456789">🇬🇧 UK (+44)</option>
+                                            <option value="+91" data-flag="🇮🇳" data-pattern="[0-9]{10}" data-placeholder="9876543210">🇮🇳 India (+91)</option>
+                                            <option value="+86" data-flag="🇨🇳" data-pattern="[0-9]{11}" data-placeholder="13812345678">🇨🇳 China (+86)</option>
+                                            <option value="+81" data-flag="🇯🇵" data-pattern="[0-9]{10}" data-placeholder="09012345678">🇯🇵 Japan (+81)</option>
+                                            <option value="+49" data-flag="🇩🇪" data-pattern="[0-9]{11}" data-placeholder="01701234567">🇩🇪 Germany (+49)</option>
+                                        </select>
+                                    </div>
+                                    <input type="tel" name="phone" id="phone" placeholder="0257679050" inputmode="numeric" autocomplete="tel" required>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <select name="service" id="service" required aria-label="Select a service type" title="Choose the type of service you need">
