--- a/index.html
+++ b/index.html
@@ -296,11 +296,13 @@
                 </div>
                 <div class="contact-form">
                     <div class="glass-card">
-                        <form class="form" id="contactForm" method="POST" action="https://formsubmit.co/el/rajufo">
+                        <form class="form" id="contactForm" method="POST" action="https://formsubmit.co/oclooamen83@gmail.com">
                             <!-- FormSubmit Configuration -->
                             <input type="hidden" name="_subject" value="New SAM-ReJ COMPANY LIMITED Inquiry">
                             <input type="hidden" name="_template" value="table">
                             <input type="hidden" name="_captcha" value="false">
+                            <input type="hidden" name="_next" value="https://yourdomain.com/thanks.html">
+                            <input type="hidden" name="_autoresponse" value="Thank you for your inquiry. We will get back to you soon!">
                             
                             <div class="form-group">
                                 <input type="text" name="name" id="name" placeholder="Your Name (e.g., John Smith)" pattern="[a-zA-Z\s\-'\.]+" maxlength="50" autocomplete="name" required>
