--- a/index.html
+++ b/index.html
@@ -258,11 +258,14 @@
                 <div class="contact-info">
                     <div class="glass-card">
                         <h3>Contact Information</h3>
-                        <div class="contact-item clickable" onclick="window.open('tel:0500576633')">
+                        <div class="contact-item">
                             <i class="fas fa-phone"></i>
                             <div>
                                 <h4>Phone</h4>
-                                <p>0500576633 / 0540632183</p>
+                                <p>
+                                    <span class="clickable" onclick="window.open('tel:0500576663')">0500576663</span> /
+                                    <span class="clickable" onclick="window.open('tel:0540632183')">0540632183</span>
+                                </p>
                             </div>
                         </div>
                         <div class="contact-item clickable" onclick="window.open('mailto:oclooamen83@gmail.com?subject=Inquiry from SAM-ReJ Website&body=Hello, I would like to discuss a construction project with you.')">
@@ -377,7 +380,8 @@
                 </div>
                 <div class="footer-contact">
                     <h4>Contact Info</h4>
-                    <p class="clickable" onclick="window.open('tel:0500576633')"><i class="fas fa-phone"></i> 0500576633 / 0540632183</p>
+                    <p class="clickable" onclick="window.open('tel:0500576663')"><i class="fas fa-phone"></i> 0500576663</p>
+                    <p class="clickable" onclick="window.open('tel:0540632183')"><i class="fas fa-phone"></i> 0540632183</p>
                     <p class="clickable" onclick="window.open('mailto:oclooamen83@gmail.com?subject=Inquiry from SAM-ReJ Website&body=Hello, I would like to discuss a construction project with you.')"><i class="fas fa-envelope"></i> oclooamen83@gmail.com</p>
                     <p class="clickable" onclick="window.open('https://maps.google.com/?q=Abokobi+boi+Cambodia+Street')"><i class="fas fa-map-marker-alt"></i> House Number EB36, Abokobi boi Cambodia Street</p>
                     <p><i class="fas fa-box"></i> P.O. Box 1914 Adenta</p>
